# llm-api-router

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: providers.yaml
docs/: dashboard.html  development-notes.md
results/: routing_trace.csv  routing_trace.json
scripts/: run_demo.py
src/llm_api_router/: __init__.py  providers.py  router.py
tests/: test_router.py
